# password-less-app

./: .gitignore  README.md  env.sh  lambda-executor-policy.json  package.json  serverless.yml
functions/: otp.yml  private.yml
functions/api_requests/cognito/: create_auth_challenge.json  define_auth_challenge.json  pre_sign_up.json  sign_up.json
functions/otp/: base.py  create_auth_challenge.py  define_auth_challenge.py  pre_sign_up.py  refresh_token.py  sign_in.py  sign_up.py  verify_auth_challenge_response.py
functions/otp/test/: test_unit.py
functions/private/: call.py
openapi/: schema.yml
resources/: cognito-user-pool-client.yml  cognito-user-pool.yml  role-cognito-consumer.yml  role-monitoring-logs.yml  role-notification-sender.yml
services/my-app-api-users/: env.sh  package.json  pyproject.toml  serverless.yml
services/my-app-api-users/functions/api/users/: function.yml  lambda_function.py  models.py
services/my-app-api-users/resources/: dynamodb-users.yml
services/my-app-api-users/resources/seeds/db/: users.json
services/my-app-api-users/tests/: test_functions.py
services/my-app-auth/: env.sh  package.json  pyproject.toml  serverless.yml
services/my-app-auth/openapi/: schema.yml
services/my-app-auth/resources/: api-gateway-authorizer.yml  cognito-user-pool-client.yml  cognito-user-pool.yml
shared/: env.sh  pyproject.toml  serverless.common.yml
shared/common/: base.py  common  models.py  services_connection.py
template/: env.sh  package.json  pyproject.toml  serverless.yml
template/tests/: test_functions.py
(+24 files in other folders)
