[tool.poetry]
name = "functions"
version = "0.1.0"
description = ""
authors = ["Pablo Atoche <pjatocheseminario@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.15.16"
dynamodb-json = "^1.3"
requests = "^2.24.0"
pynamodb = "^4.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
boto3 = "^1.15.16"
dynamodb-json = "^1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
